不使用正数签名的安装方式

--- a/Sources/BatteryCap/Resources/com.batterycap.helper.plist
+++ b/Sources/BatteryCap/Resources/com.batterycap.helper.plist
@@ -9,9 +9,9 @@
         <key>com.batterycap.helper</key>
         <true/>
     </dict>
-    <key>ProgramArguments</key>
-    <array>
-        <string>com.batterycap.helper</string>
-    </array>
+	<key>ProgramArguments</key>
+	<array>
+		<string>/Library/PrivilegedHelperTools/com.batterycap.helper</string>
+	</array>
 </dict>
 </plist>
