--- a/Sources/BatteryCap/Info.plist
+++ b/Sources/BatteryCap/Info.plist
@@ -8,6 +8,8 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.batterycap.app</string>
+	<key>CFBundleIconName</key>
+	<string>BatteryCap</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
